source: apply formatter + some minor changes on problem implementation
- rename `fromConfig` to `from` and always require the full path `problem.details`
- remove `Internal` from title and description
- adjust tests